Added better documentation to swagger
