# packages/order-experience-api/src/openapi.yaml
@@ -385,6 +385,37 @@ components:
                 type: string
               originalPriceGross:
                 type: string
+
+    RefundPayment:
+      type: object
+      properties:
+        refundPaymentId:
+          type: string
+          description: 'refundId (Refund model id) + timestamp (Like creating paymentId)'
+        orderId:
+          type: string
+        userId:
+          type: string
+        status:
+          type: string
+          description: 'Check RefundPaymentStatus in core'
+        refundMethod:
+          type: string
+        refundType:
+          type: string
+          description: 'order or subscription'
+        refundGateway:
+          type: string
+          description: 'Check RefundGateway in core'
+        totalExclTax:
+          type: number
+        total:
+          type: number
+        taxAmount:
+          type: number
+        refundTransactionId:
+          type: string
+
     PaymentFilter:
       type: object
       required:
@@ -1384,7 +1415,7 @@ paths:
                           format: int32
       responses:
         '200':
-          description: The created refunds and errors. Both the arrays preserve ordering of the request body. In case of errors, the first missing refund would be the first element in errors etc. There is exactly one error for each failed refund.
+          description: The created refunds and errors. Both the arrays preserve ordering of the request body. In case of errors, the first missing refund would be the first element in errors etc. There is exactly one error for each failed refund. Creates refund payments too and returns them on payment field
           content:
             application/json:
               schema:
@@ -1403,7 +1434,7 @@ paths:
                             - payment
                           properties:
                             payment:
-                              type: object
+                              $ref: '#/components/schemas/RefundPayment'
                   errors:
                     type: array
                     items:
@@ -1424,7 +1455,7 @@ paths:
           $ref: '#/components/responses/InternalServerError'
   /refund/{refundId}/confirm:
     post:
-      description: Confirm refund
+      description: Confirm refund and creates refund payment and return them on payment field in response
       security:
         - ApiKey: [ ]
       parameters:
@@ -1439,9 +1470,12 @@ paths:
                 type: object
                 required:
                   - refund
+                  - payment
                 properties:
                   refund:
                     $ref: '#/components/schemas/Refund'
+                  payment:
+                    $ref: '#/components/schemas/RefundPayment'
         '400':
           $ref: '#/components/responses/RequestValidationError'
         '403':
